# Bisection_Alg

./: CMakeLists.txt  README.md
include/: header.hpp
source/: bisection_alg.cpp  main.cpp  matrx_funcs.cpp
